--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>¶ŽY«Œüã‰ÁŽZƒ`ƒFƒbƒN</title>
+    <title>ç”Ÿç”£æ€§å‘ä¸ŠæŽ¨é€²ä½“åˆ¶åŠ ç®—ãƒŠãƒ“</title>
   </head>
   <body class="antialiased bg-slate-50">
     <div id="root"></div>
